--- a/style.css
+++ b/style.css
@@ -22,25 +22,43 @@ body {
     max-width: 1200px;
     height: 80vh;
     background-color: black;
+    box-shadow: 2px 3px ;
+    color: white;
+    border-radius: 0 0 40px 40px;
 }
 
 header {
     color: white;
 }
 h1{
-
     font-family: var(--font2);
     font-size: 12em;
-    text-shadow: 3px 5px 2px yellow;
+    text-shadow: 3px 2px 10px red;
+    transform: rotate(160deg);
+    color: grey;
+    margin-top: 12%;
+}
+span {
+    color: black;
+    text-shadow: 3px 2px 10px red;
+}
+
+h2{
+    text-align: center;
+    font-size: 6em;
+    padding: 7%;
+    text-transform: capitalize;
+    font-family: var(--font2);
 }
 
 #box {
-    border: 2px solid white;
+    border: 2px outset white;
     display: grid;
     gap: 24px;
     grid-template-columns: repeat(3,1fr);
     padding: 3%;
     align-items: center;
+    margin: 0 2%;
 }
 #box1 {
     border: 4px solid red;
