--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header {
 }
 h1{
     font-family: var(--font2);
-    font-size: 12em;
+    font-size: 11em;
     text-shadow: 3px 2px 10px red;
     transform: rotate(160deg);
     color: grey;
@@ -71,4 +71,17 @@ h2{
 #box3 {
     border: 4px solid red;
     height: 20vh;
+}
+
+#square {
+ display: flex;
+ justify-content: center;
+}
+
+#one {
+    width: 38px;
+    height: 38px;
+    background-color: gray;
+    box-shadow: 2px 3px 5px ;
+    margin: 5px;
 }
