--- a/style.css
+++ b/style.css
@@ -45,10 +45,16 @@ span {
 
 h2{
     text-align: center;
-    font-size: 6em;
+    font-size: 2.5em;
     padding: 7%;
-    text-transform: capitalize;
     font-family: var(--font2);
+    background-color: red;
+    width: 200px;
+}
+
+#reply1 {
+    background-color: red;
+    
 }
 
 #box {
@@ -84,4 +90,26 @@ h2{
     background-color: gray;
     box-shadow: 2px 3px 5px ;
     margin: 5px;
+}
+
+h3{
+    font-size: 2em;
+    font-family: var(--font2);
+    text-align: center;
+    margin-bottom: 20px;
+   
+}
+
+#response1 {
+    background-color: gray;
+    width: 80px;
+    margin-left: 10px;
+    font-size: 1.2em;
+}
+#response2 {
+    background-color: white;
+    color: black;
+    width: 80px;
+    margin: 10px 0 10px 70px;
+    font-size: 1.2em;
 }
