--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ h2{
     padding: 7%;
     font-family: var(--font2);
     background-color: red;
-    width: 200px;
 }
 
 #reply1 {
@@ -61,10 +60,16 @@ h2{
     border: 2px outset white;
     display: grid;
     gap: 24px;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: minmax(150px,1fr) minmax(200px,1fr) minmax(150px,1fr);
     padding: 3%;
     align-items: center;
     margin: 0 2%;
+}
+
+@media (max-width: 800px) {
+    #box {
+        grid-template-rows: auto auto auto;
+    }
 }
 #box1 {
     border: 4px solid red;
@@ -84,7 +89,7 @@ h2{
  justify-content: center;
 }
 
-#one {
+#one, #first , #last {
     width: 38px;
     height: 38px;
     background-color: gray;
@@ -97,7 +102,6 @@ h3{
     font-family: var(--font2);
     text-align: center;
     margin-bottom: 20px;
-   
 }
 
 #response1 {
@@ -112,4 +116,55 @@ h3{
     width: 80px;
     margin: 10px 0 10px 70px;
     font-size: 1.2em;
+}
+
+#first {
+  background-color: black;
+  box-shadow: 2px 3px 5px red;
+  animation: backward 5s infinite;
+}
+
+
+@keyframes backward {
+    0% {
+        transform: translateX(0);
+    }
+   
+    30% {
+        transform: translateX(-200px);
+    }
+    45% {
+        transform: translateX(-300px); 
+    }
+    750% {
+        transform: translateX(50px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+#last {
+    background-color: black;
+    box-shadow: 2px 3px 5px red;
+    animation: forward 5s infinite;
+}
+
+@keyframes forward {
+    0% {
+        transform: translateX(0);
+    }
+   
+    30% {
+        transform: translateX(200px);
+    }
+    45% {
+        transform: translateX(300px); 
+    }
+    750% {
+        transform: translateX(-50px);
+    }
+    100% {
+        transform: translateX(0);
+    }
 }
