--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h1{
     color: grey;
     margin-top: 12%;
 }
-span {
+#te {
     color: black;
     text-shadow: 3px 2px 10px red;
 }
@@ -131,7 +131,7 @@ h3{
     }
    
     30% {
-        transform: translateX(-200px);
+        transform: translateX(-20%);
     }
     45% {
         transform: translateX(-300px); 
@@ -156,7 +156,7 @@ h3{
     }
    
     30% {
-        transform: translateX(200px);
+        transform: translateX(20%);
     }
     45% {
         transform: translateX(300px); 
@@ -167,4 +167,13 @@ h3{
     100% {
         transform: translateX(0);
     }
+}
+
+#keyboard {
+    font-size: 20px;
+    background-color: black;
+    padding: 6px 9.4px;
+    border-radius: 5px;
+    box-shadow: 6px 6px 20px gray;
+
 }
